--- a/07_patrones_de_urls.ipynb
+++ b/07_patrones_de_urls.ipynb
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd tutotial"
+    "%cd tutorial"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python manage.py runserver 0.0.0.0:8000"
+    "!python manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
