--- a/09_objetos_request_y_response.ipynb
+++ b/09_objetos_request_y_response.ipynb
@@ -97,11 +97,17 @@
     "\n",
     "La clase ```django.http.QueryDict``` es similar a un objeto tipo ```dict```, con la diferencia de que puede contener más de un objeto con la misma clave. Estos objetos con clave compartida son referidos dentro de en un objeto de tipo ```list```.\n",
     "\n",
-    "La clase ```django.http.QueryDict``` es inmutable.\n",
+    "La clase ```django.http.QueryDict``` es inmutable por defecto.\n",
     "\n",
-    "``` python\n",
-    "QueryDict.(query_string=None, mutable=False, encoding=None)\n",
-    "````"
+    "```\n",
+    "QueryDict.(query_string=<consulta>, mutable=<boolean>, encoding=<codificación>)\n",
+    "````\n",
+    "\n",
+    "Donde: \n",
+    "\n",
+    "* ```<consulta>``` es un objeto de tipo ```str``` que contiene una consulta con parámaetros como si se ingresarane  un una *URL*.\n",
+    "* ```<booleano>``` es un objeto de tipo ```bool```. El valor por defecto es ```False``` e indica que el objeto instnaciado es inmutable.\n",
+    "* ```<codificación>``` es una cadena de caracteres que indica la codificación del texto."
    ]
   },
   {
@@ -111,6 +117,7 @@
     "### Métodos de ```django.http.QueryDict```.\n",
     "\n",
     "Cuenta con los siguientes métodos que son similares a los del tipo ```dict```:\n",
+    "\n",
     "* ```clear()```.\n",
     "* ```pop()```.\n",
     "* ```popitem()```.\n",
@@ -121,18 +128,18 @@
     "\n",
     "#### Métodos de gestión.\n",
     "\n",
-    "* ```get()```.\n",
+    "* ```get()``` obtiene un atributo del objeto  ```django.http.QueryDict```.\n",
     "* ```dict()``` convierte el contenido del objeto ```django.http.QueryDict``` en un objeto tipo ```dict```.\n",
-    "* ```copy()```.\n",
-    "* ```urlencode()```.\n",
+    "* ```copy()``` crea una copia del objeto ```django.http.QueryDict```.\n",
+    "* ```urlencode()``` regresa un objeto ```str``` cuyo contenido usa la sintaxis de una consulta en una *URL* para desplegar las listas del objeto```django.http.QueryDict``` .\n",
     "\n",
     "#### Métodos de listas.\n",
     "\n",
-    "* ```getlist()```.\n",
-    "* ```setlist()```.\n",
+    "* ```getlist()``` regresa la lista de objetos ligados a una clave.\n",
+    "* ```setlist()``` èn caso de que el objeto ```django.http.QueryDict``` sea nutabklwe, es posible modificar o crear una lista con clavle.\n",
     "* ```appendlist()```.\n",
     "* ```setlistdefault()```.\n",
-    "* ```lists()```."
+    "* ```lists()``` regresa las claves y sus listas correspondientes contenida en un objeto ```django.http.QueryDict```."
    ]
   },
   {
@@ -330,7 +337,7 @@
     "\n",
     "\n",
     "def listas (request):\n",
-    "    return HttpResponse(request.GET.lists()\n",
+    "    return HttpResponse(request.GET.lists())\n",
     "```"
    ]
   },
@@ -448,6 +455,13 @@
    "metadata": {},
    "source": [
     "## Resultado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las siguientes *URLs* pueden ser accedidas mediante un navegador debido a que usa el método ```GET```."
    ]
   },
   {
