--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get install libmysqlclient-dev -y"
+    "!sudo apt-get install libmariadb-dev -y"
    ]
   },
   {
