--- a/14_creacion_de_una_api_rest.ipynb
+++ b/14_creacion_de_una_api_rest.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Operaciones básicas con modelos."
+    "# Creación de una *API REST*."
    ]
   },
   {
@@ -727,7 +727,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM api_alumno;"
+    "%sql SELECT * FROM main_alumno;"
    ]
   },
   {
@@ -755,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
