--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Lenguaje de plantillas de *Django*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
     "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
@@ -29,7 +36,7 @@
     "Las plantillas que incluyen código basado en el *DTL* puede realizar las siguientes operaciones.\n",
     "\n",
     "* Acceder a los objetos ingresados en un contexto de forma similar a como Python accede al espacio de nombres del ámbito global.\n",
-    "* Ejecutar expresiones utilizando de filtros.\n",
+    "* Ejecutar expresiones utilizando filtros.\n",
     "* Delimitar bloques.\n",
     "* Ejecutar declaraciones condicionales.\n",
     "* Realizar ciclos.\n",
@@ -43,7 +50,9 @@
     "* Definir funciones o macros.\n",
     "* Acceder a elementos de una colección mediante la sintaxis de indices usando corchetes.\n",
     "\n",
-    "Referencia:https://docs.djangoproject.com/en/2.2/ref/templates/builtins/"
+    "Referencia:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/3.1/ref/templates/builtins/"
    ]
   },
   {
@@ -71,12 +80,12 @@
     "```\n",
     "\n",
     "Donde: \n",
-    "* ```<elemento> es un objeto de python que puede ser procesado\n",
+    "* ```<elemento>``` es un objeto de python que puede ser procesado\n",
     "\n",
     "* Las expresiones permiten \"concatentar\" filtros, por lo que la salida del filtro de la izquierda es la entrada del filtro de la derecha.\n",
     "* Los filtros pueden incluir argumentos.\n",
     "\n",
-    "Los filtros dsiponibles pueden ser consultado en https://docs.djangoproject.com/en/2.2/ref/templates/builtins/#built-in-filter-reference."
+    "Los filtros dsiponibles pueden ser consultado en https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#built-in-filter-reference."
    ]
   },
   {
@@ -691,7 +700,7 @@
    },
    "outputs": [],
    "source": [
-    "%pycat tutorial\\templates\\valida.html"
+    "%pycat tutorial/templates/valida.html"
    ]
   },
   {
@@ -725,7 +734,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -768,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
