--- a/20_gestion_de_formularios.ipynb
+++ b/20_gestion_de_formularios.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Gestión de formularios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
     "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
@@ -27,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Formularios en HTML.\n",
+    "## Formularios en *HTML*.\n",
     "\n",
     "Las formularios en HTML se definen mediante la etiqueta ```<form>``` de la siguiente forma:\n",
     "\n",
@@ -239,9 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Protección contra el envío de falsificación de peticiones entre sitios (CSRF).\n",
+    "## Protección contra el envío de peticiones apócrifas entre sitios (CSRF).\n",
     "\n",
-    "Es posible que un atacante intente enviar peticiones falsificadas con la finalidad de vulnerar a un servidor desde un sitio ilegitimo. A este tipo de ataque se le conoce como \"Cross Site Request Forgery\".\n",
+    "Es posible que un atacante intente enviar peticiones falsificadas con la finalidad de vulnerar a un servidor desde un sitio ilegitimo. A este tipo de ataque se le conoce como [\"Cross Site Request Forgery\"](https://owasp.org/www-community/attacks/csrf).\n",
     "\n",
     "*Django* cuenta con un middleware que previene el envío de peticiones que no sean de un formulario válido.\n",
     "\n",
@@ -664,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
