--- a/04_mvc_mvt_y_servicios_web.ipynb
+++ b/04_mvc_mvt_y_servicios_web.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "### Puntos de acceso (\"endpoints\").\n",
     "\n",
-    "Un \"endpoint\"  es una *URL* que expone un servicio web, dicho srvicio puede ser consumido por un cliente (no necesariamente un navegador web) en caso de que cuente con la identidad y los permisos correctos."
+    "Un \"endpoint\"  es una *URL* que expone un servicio web, dicho servicio puede ser consumido por un cliente (no necesariamente un navegador web) en caso de que cuente con la identidad y los permisos correctos."
    ]
   },
   {
@@ -119,7 +119,7 @@
    "source": [
     "### Interfaces de programación de aplicaciones (*API*).\n",
     "\n",
-    "Las *API* web son un conjunto de interfaces (endpoints) que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web."
+    "Las *API* web son un conjunto de interfaces (endpoints) que exponen diversas funcionalidades de un servicio web, las cuales pueden ser utilizadas para el desarrollo de aplicaciones web, aplicaciones móviles, aplicaciones de escritorio e incluso por medio de la interfaz de la línea de comandos (*CLI*)."
    ]
   },
   {
@@ -128,7 +128,7 @@
    "source": [
     "### Aplicaciones web desde el front-end.\n",
     " \n",
-    "Debido a la rápida evolución de herramientas y franeworks basados primordialmente en Javascript, se ha podido aprovechar al navegador como una plataforma para desarollo de aplicaciones. A este tipo de aplicaciones se les conoce como \"front-end\".\n",
+    "Debido a la rápida evolución de herramientas y frameworks basados primordialmente en *Javascript*, se ha podido aprovechar al navegador como una plataforma para desarollo de aplicaciones. A este tipo de aplicaciones se les conoce como \"front-end\".\n",
     " \n",
     "Las aplicaciones de front-end son capaces de consumir servicios web directamente desde el navegador enviando peticiones al servidor o \"back-end\" mediante el acceso a las *API*."
    ]
@@ -153,7 +153,7 @@
    "source": [
     "## *SOAP*.\n",
     "\n",
-    "El *Protocolo de Acceso a Objetos Simples* ([*SOAP*](https://es.wikipedia.org/wiki/Simple_Object_Access_Protocol*SOAP*) por sus siglas en inglés) es un protocolo que define una arquitectura de servicios web basada principalment en [*AJAX*](https://developer.mozilla.org/es/docs/Web/Guide/AJAX). Dicha especificación es publicada por la [*W3C*](https://www.w3.org/TR/soap/).\n",
+    "El *Protocolo de Acceso a Objetos Simples* ([*SOAP*](https://es.wikipedia.org/wiki/Simple_Object_Access_Protocol*SOAP*) por sus siglas en inglés) es un protocolo que define una arquitectura de servicios web basada principalmente en [*AJAX*](https://developer.mozilla.org/es/docs/Web/Guide/AJAX). Dicha especificación es publicada por la [*W3C*](https://www.w3.org/TR/soap/).\n",
     "\n",
     "El siguiente enlace apunta a un tutorial de *SOAP*:\n",
     "\n",
@@ -192,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
