--- a/15_endpoints_de_la_api_rest.ipynb
+++ b/15_endpoints_de_la_api_rest.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Servidor API REST."
+    "# Puntos de acceso de la *API REST*."
    ]
   },
   {
@@ -407,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
