--- a/19_contenido_estatico.ipynb
+++ b/19_contenido_estatico.ipynb
@@ -29,6 +29,7 @@
    "source": [
     "Existen algunos archivos a los que las plantillas de *Django* pueden acceder como contenido estáticos tales como.\n",
     "\n",
+    "* Páginas estáticas en HTML.\n",
     "* Hojas de estilo (CSS).\n",
     "* Scripts en Javascript.\n",
     "* Imágenes.\n",
@@ -598,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se copiará el archivo  ```src/20/base.html``` al directorio ```tutorial/templates/```."
+    "* A continuación se copiará el archivo  ```src/19/base.html``` al directorio ```tutorial/templates/```."
    ]
   },
   {
@@ -702,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
